2024-10-12  Sam Varshavchik  <mrsam@courier-mta.com>

	* Version 1.4

	* Add color to the messages on the system console.

2024-08-14  Sam Varshavchik  <mrsam@courier-mta.com>

	* Version 1.3.1

2024-08-13  Sam Varshavchik  <mrsam@courier-mta.com>

	* update-logrotate.in: Fix typo.

2024-08-07  Sam Varshavchik  <mrsam@courier-mta.com>

	* Version 1.3

	* Improve logic for showing status of in-progress feedback when
	starting runlevels. Fix a spurious "unknown command" after processing
	a compatibility "init X" command.

2024-08-06  Sam Varshavchik  <mrsam@courier-mta.com>

	* Fix converted inittab dependencies. Fixes erroneous rc.M stops when
	switching between runlevels.

	* Employ a lock file when setting resources or overrides.

2024-07-30  Sam Varshavchik  <mrsam@courier-mta.com>

	* Release 1.2

	* Implement support for setting cgroups v2 resources.

2024-07-29  Sam Varshavchik  <mrsam@courier-mta.com>

	* Fix race condition that prevents an empty cgroup from getting
	removed, in some circumstances.

	* Implement "Requires-First" dependencies, to improve the semantics
	of boot dependencies.

2024-07-28  Sam Varshavchik  <mrsam@courier-mta.com>

	* vera.C: The "status" command will imply --stopped if any units
	are provided.

2024-07-21  Sam Varshavchik  <mrsam@courier-mta.com>

	* Release 1.1

	* Implement the "revert", "freeze", and "thaw" commands.

2024-07-17  Sam Varshavchik  <mrsam@courier-mta.com>

	* Implement the "edit" command.

2024-06-22  Sam Varshavchik  <mrsam@courier-mta.com>

	* Release 1.0

	* Use cgroup.kill to stop all processes in a container, instead of
	manually sending SIGKILL to each process.

2024-06-05  Sam Varshavchik  <mrsam@courier-mta.com>

	* INSTALL: updated uninstallation/upgrade documentation.

2024-04-25  Sam Varshavchik  <mrsam@courier-mta.com>

	* Release 0.94

	* inittab.C: scan rc.D scripts to heuristically detect if they
	implement "restart" or "reload", define the command in the converted
	unit file.
